<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:scrollbarStyle="insideOverlay"
    tools:context="com.example.onclouderp.ContactUs" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.onclouderpandroidapp.ContactUsActivity" >

      <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ContactInformation"
            android:textColor="#428bca"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameText2"
            android:layout_below="@+id/nameText2"
            android:text="@string/NagarName"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/nameText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameText3"
            android:layout_below="@+id/nameText3"
            android:text="@string/CityName"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/nameCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameText4"
            android:layout_below="@+id/nameText4"
            android:text="@string/MainCityName"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/nameText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameCity"
            android:layout_below="@+id/nameCity"
            android:text="@string/StateName"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/nameText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameText6"
            android:layout_below="@+id/nameText6"
            android:text="@string/CountryName"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/nameText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/nameText"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@+id/nameText"
            android:text="@string/CompanyName"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/nameText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameText1"
            android:layout_below="@+id/nameText1"
            android:text="@string/StreetName"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/EmailContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Email"
            android:layout_alignLeft="@+id/nameText7"
            android:text="@string/EmailId"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameText"
            android:layout_below="@+id/nameText7"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="5dp"
            android:layout="@+id/button1"
            android:text="@string/Email"
            android:textSize="17sp"
            android:textStyle="bold|normal" />

        <TextView
            android:id="@+id/PhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Phone"
            android:layout_alignBottom="@+id/Phone"
            android:layout_alignLeft="@+id/EmailContent"
            android:text="@string/PhoneNumber"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/Website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Websites"
            android:layout_alignLeft="@+id/PhoneNumber"
            android:text="@string/Websites"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Email"
            android:layout_below="@+id/Email"
            android:layout_marginTop="17dp"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="5dp"
            android:text="@string/Phone"
            android:textSize="17sp"
            android:textStyle="bold|normal" />

        <TextView
            android:id="@+id/Websites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Phone"
            android:layout_below="@+id/Phone"
            android:layout_marginTop="14dp"
            android:drawableLeft="@drawable/website"
            android:drawablePadding="5dp"
            android:text="@string/Website"
            android:textSize="17sp"
            android:textStyle="bold|normal" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="41dp"
            android:drawableLeft="@drawable/address"
            android:drawablePadding="5dp"
            android:layout="@+id/button1"
            android:text="@string/Address"
            android:textSize="17sp"
            android:textStyle="bold|normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:background="#D8D8D8" />
    </RelativeLayout>

</ScrollView>