<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.onclouderpandroidapp.HomeActivity" >

    <item
        android:id="@+id/about_menu"
        android:icon="@drawable/about_us"
        android:title="@string/about_us"
        app:showAsAction="always"/>
     <item
        android:id="@+id/contact_menu"
        android:icon="@drawable/contact_us"
        android:title="@string/contact"
        app:showAsAction="always"/>
    <item
        android:id="@+id/login_menu"
        android:icon="@drawable/login"
        android:title="@string/login"
        app:showAsAction="ifRoom"/>
   <!--  <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/> -->

</menu>
