<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.onclouderpandroidapp.AboutUsActivity" >

   <!--  <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/> -->
    <item
        android:id="@+id/contact_menu"
        android:icon="@drawable/contact_us"
        android:title="@string/contact"
        app:showAsAction="always"/>
    <item
        android:id="@+id/login_menu"
        android:icon="@drawable/login"
        android:title="@string/login"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/homePage_menu"
        android:icon="@drawable/home_page"
        android:title="@string/home_page"
        app:showAsAction="ifRoom"/>

</menu>