<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.onclouderpandroidapp.SaleOrderDetailsActivity" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblDocumentNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/documentNo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDocumentNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblDocumentNo" />

            <TextView
                android:id="@+id/lblCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDocumentNo"
                android:layout_marginTop="10dp"
                android:text="@string/customer"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDocumentNo"
                android:layout_marginTop="25dp" />
            
            <TextView
                android:id="@+id/lblDeliveryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtShippingAddress"
                android:text="@string/deliveryDate"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/txtDeliveryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblDeliveryDate"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/lblCurrencyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDeliveryDate"
                android:text="@string/currencyValue"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/txtCurrencyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblCurrencyValue"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/lblPriceList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCurrencyValue"
                android:text="@string/priceList"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/txtPriceList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblPriceList"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/lblCustomerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCustomer"
                android:layout_marginTop="10dp"
                android:text="@string/customerAddress"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCustomerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblCustomerAddress"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/lblCustomerPoDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCustomerAddress"
                android:layout_marginTop="10dp"
                android:text="@string/customerPoDate"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCustomerPoDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblCustomerPoDate"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/lblCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCustomerPoDate"
                android:layout_marginTop="10dp"
                android:text="@string/currency"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblCurrency"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/lblSalesPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCurrency"
                android:layout_marginTop="10dp"
                android:text="@string/salesPerson"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSalesPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblSalesPerson"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/lblEntryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtSalesPerson"
                android:layout_marginTop="10dp"
                android:text="@string/entryDate"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEntryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblEntryDate"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/lblCustomerPONumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEntryDate"
                android:layout_marginTop="10dp"
                android:text="@string/customerPONumber"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCustomerPONumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblCustomerPONumber"
                android:layout_marginTop="0dp" />

            <TextView
                android:id="@+id/lblShippingAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCustomerPONumber"
                android:layout_marginTop="10dp"
                android:text="@string/shippingAddress"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtShippingAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblShippingAddress"
                android:layout_marginTop="0dp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>