<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.onclouderpandroidapp.LinkActivity" >

   
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:id="@+id/txtGreeting" />

     <TextView
         android:id="@+id/txtroleName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="50dp"
         android:text="@string/hello_world" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/txtroleName"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/Your_Image" />

    <Button
        android:id="@+id/btnApproval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false" 
        android:textColor="#FFFFFF"
        android:onClick="navigate"
        android:background="@drawable/buttoncolor"
        android:layout_alignRight="@+id/btnReport"
        android:layout_above="@+id/btnReport"
        android:text="@string/title_activity_approval" />

    <Button
        android:id="@+id/btnReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false" 
        android:onClick="navigate"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttoncolor"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/Reports" />
    
</RelativeLayout>